# histovis-workers

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
consumer-common/: pyproject.toml
consumer-common/consumer_common/: broker.py  exceptions.py  http_client.py  models.py  r2_client.py  registry.py  settings.py  tileserver_client.py
consumer-qwen/: Dockerfile  consumer.py  handler_registry.py  handlers.yaml  http_client.py  main.py  model_loader.py  requirements.txt  settings.py
consumer-qwen/handlers/: describe_wsi.py  verify_plugin.py
consumer-stardist/: Dockerfile  consumer.py  handlers.yaml  main.py  model_loader.py  requirements.txt  settings.py
consumer-stardist/handlers/: he_nuclei_count.py  ihc_positive_cells.py  install_plugin.py
consumer-tileserver/: Dockerfile  consumer.py  image_service.py  image_utils.py  main.py  models.py  requirements.txt  settings.py  slides.py
docs/: cloud-init.yaml  docker-setup.md  setup.sh
